--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -42,6 +42,14 @@
 # This is a data set used by the "Hello World" example pipeline provided with the project
 # template. Please feel free to remove it once you remove the example pipeline.
 
-example_iris_data:
-  type: pandas.CSVDataSet
-  filepath: data/01_raw/iris.csv
+price_elasticity:
+  type: pandas.ExcelDataSet
+  filepath: data\04_feature\elasticity.xlsx
+
+business_performance:
+  type: pandas.ExcelDataSet
+  filepath: data\04_feature\resultado.xlsx
+
+cross_price_elasticity:
+  type: pandas.ExcelDataSet
+  filepath: data\04_feature\result.xlsx
